Finish Word2Vec Assignment

--- a/cs224n/word2vec/exploring_word_vectors.ipynb
+++ b/cs224n/word2vec/exploring_word_vectors.ipynb
@@ -711,8 +711,8 @@
     "id": "fLU7o3HESSuF"
    },
    "source": [
-    "#### <font>Raw Materials: copper, platinum, silver, and gold</font>\n",
-    "#### <font>Mining Related: metals, value, mine, belgium, china</font>"
+    "#### <font>Raw Materials: copper, platinum, silver, and gold.</font>\n",
+    "#### <font>Mining Related: metals, value, reserves, belgium, china.</font>"
    ]
   },
   {
@@ -730,8 +730,8 @@
     "id": "3NG2j9J4SSuG"
    },
    "source": [
-    "#### <font>Australia and the other nations</font>\n",
-    "#### <font>Metals and the other raw materials</font>"
+    "#### <font>Australia and the other nations.</font>\n",
+    "#### <font>Metals and the other raw materials.</font>"
    ]
   },
   {
@@ -762,30 +762,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[=====================-----------------------------] 43.4% 109.4/252.1MB downloaded"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub message rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[==================================================] 100.0% 252.1/252.1MB downloaded\n",
       "Loaded vocab size 400000\n"
      ]
     }
@@ -981,7 +957,8 @@
     "id": "5KC4PTQoSSuQ"
    },
    "source": [
-    "#### <font> The x-axis of each graph scales uniquely while both cap at 1.00.</font>"
+    "#### <font> The x-axis of each graph scales uniquely while both cap at 1.00.</font>\n",
+    "#### <font> The y-axis of each graph has different ranges.</font>"
    ]
   },
   {
@@ -1036,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1090,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1147,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1230,20 +1207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {
     "id": "CRvYK2xifpq7"
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 9\u001b[0m\n\u001b[0;32m      4\u001b[0m x, y, a, b \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwoman\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mking\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mman\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# ------------------\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Test the solution\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m wv_from_bin\u001b[38;5;241m.\u001b[39mmost_similar(positive\u001b[38;5;241m=\u001b[39m[a, y], negative\u001b[38;5;241m=\u001b[39m[x])[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m b\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('sewage', 0.4742078483104706),\n",
+      " ('clean', 0.46128708124160767),\n",
+      " ('irrigation', 0.44886845350265503),\n",
+      " ('lake', 0.4434764087200165),\n",
+      " ('sand', 0.4328475296497345),\n",
+      " ('drainage', 0.4302247166633606),\n",
+      " ('salt', 0.43020787835121155),\n",
+      " ('canals', 0.42244887351989746),\n",
+      " ('floating', 0.4159584939479828),\n",
+      " ('ponds', 0.41143032908439636)]\n"
      ]
     }
    ],
@@ -1251,21 +1233,14 @@
     "# For example: x, y, a, b = (\"\", \"\", \"\", \"\")\n",
     "# ------------------\n",
     "# Write your implementation here.\n",
-    "x, y, a, b = (\"woman\",\"king\",\"man\",\"\")\n",
+    "x = \"fairy\"\n",
+    "y = \"water\"\n",
+    "a = \"demon\"\n",
     "\n",
     "# ------------------\n",
     "\n",
     "# Test the solution\n",
-    "assert wv_from_bin.most_similar(positive=[a, y], negative=[x])[0][0] == b"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "K3QlPqAwSSub"
-   },
-   "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "pprint.pprint(wv_from_bin.most_similar(positive=[x, y], negative=[a]))"
    ]
   },
   {
@@ -1280,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1330,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {
     "id": "ms-DTC8_ftiA"
    },
@@ -1339,16 +1314,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('adjacent', 0.47146451473236084),\n",
-      " ('parks', 0.4685494005680084),\n",
-      " ('ewood', 0.4580014944076538),\n",
-      " ('canoga', 0.45552173256874084),\n",
-      " ('fratton', 0.4467739164829254),\n",
-      " ('moved', 0.4465157389640808),\n",
-      " ('severna', 0.44201210141181946),\n",
-      " ('farther', 0.42697325348854065),\n",
-      " ('downtown', 0.4258109927177429),\n",
-      " ('ayresome', 0.4226471483707428)]\n"
+      "[('twigs', 0.4909331202507019),\n",
+      " ('mulch', 0.44987115263938904),\n",
+      " ('bite', 0.41209298372268677),\n",
+      " ('sawdust', 0.403557687997818),\n",
+      " ('root', 0.39719244837760925),\n",
+      " ('hairs', 0.3943493068218231),\n",
+      " ('trees', 0.3923712968826294),\n",
+      " ('leaf', 0.3893471956253052),\n",
+      " ('fibrous', 0.3875541687011719),\n",
+      " ('tree', 0.3850131928920746)]\n"
      ]
     }
    ],
@@ -1357,9 +1332,10 @@
     "# ------------------\n",
     "# Write your implementation here.\n",
     "\n",
-    "a = 'park'\n",
-    "y = 'moving'\n",
-    "x = 'as'\n",
+    "a = 'bark'\n",
+    "y = 'dog'\n",
+    "x = 'cat'\n",
+    "b = \"\"\n",
     "# ------------------\n",
     "pprint.pprint(wv_from_bin.most_similar(positive=[a, y], negative=[x]))\n",
     "assert wv_from_bin.most_similar(positive=[a, y], negative=[x])[0][0] != b"
@@ -1371,7 +1347,7 @@
     "id": "c4x0EHjeSSue"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font> Since there is no direct \"bark\" attributes for cat, the results are quite random.</font>"
    ]
   },
   {
@@ -1389,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1397,7 +1373,35 @@
     "id": "XggWA4MhSSuf",
     "outputId": "534a694b-f4fa-479e-9e7c-12b17db3abb8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('reputation', 0.5250176787376404),\n",
+      " ('professions', 0.5178037881851196),\n",
+      " ('skill', 0.49046966433525085),\n",
+      " ('skills', 0.49005505442619324),\n",
+      " ('ethic', 0.4897659420967102),\n",
+      " ('business', 0.487585186958313),\n",
+      " ('respected', 0.4859202802181244),\n",
+      " ('practice', 0.482104629278183),\n",
+      " ('regarded', 0.4778572916984558),\n",
+      " ('life', 0.4760662019252777)]\n",
+      "\n",
+      "[('professions', 0.5957457423210144),\n",
+      " ('practitioner', 0.4988412857055664),\n",
+      " ('teaching', 0.48292139172554016),\n",
+      " ('nursing', 0.48211804032325745),\n",
+      " ('vocation', 0.4788965880870819),\n",
+      " ('teacher', 0.47160351276397705),\n",
+      " ('practicing', 0.46937811374664307),\n",
+      " ('educator', 0.46524322032928467),\n",
+      " ('physicians', 0.46289944648742676),\n",
+      " ('professionals', 0.4601393938064575)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell\n",
     "# Here `positive` indicates the list of words to be similar to and `negative` indicates the list of words to be\n",
@@ -1414,7 +1418,8 @@
     "id": "x4g6KbsYSSuh"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font> Words associated with men focus more in positive attributes like skills and enthic. </font>\n",
+    "#### <font> Meanwhiles, words associated with women are targeted professions such as educator and nurse.</font>"
    ]
   },
   {
@@ -1430,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1438,12 +1443,39 @@
     "id": "PZoDheIfSSui",
     "outputId": "f45fef83-ee36-4ef1-b970-775c3b40c515"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('fishkeeping', 0.5321633815765381),\n",
+      " ('breadmaking', 0.487370103597641),\n",
+      " ('music-making', 0.48046308755874634),\n",
+      " ('morgenstierne', 0.4709964692592621),\n",
+      " ('o’neil', 0.46868500113487244),\n",
+      " ('slosson', 0.4565924406051636),\n",
+      " ('woodturning', 0.44873934984207153),\n",
+      " ('mcguane', 0.4445716142654419),\n",
+      " ('amatory', 0.4434507191181183),\n",
+      " ('sarig', 0.4428560435771942)]\n",
+      "[('another', 0.5177688598632812),\n",
+      " ('interest', 0.5111159086227417),\n",
+      " ('business', 0.5071728825569153),\n",
+      " ('even', 0.5054244995117188),\n",
+      " ('buying', 0.5045006275177002),\n",
+      " ('big', 0.5025376677513123),\n",
+      " ('local', 0.497509628534317),\n",
+      " ('taking', 0.4959590435028076),\n",
+      " ('one', 0.4956795871257782),\n",
+      " ('besides', 0.4954055845737457)]\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------\n",
     "# Write your implementation here.\n",
-    "\n",
-    "\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['middle-east', 'hobby'], negative=['asian']))\n",
+    "pprint.pprint(wv_from_bin.most_similar(positive=['asian', 'hobby'], negative=['middle-east']))\n",
     "# ------------------"
    ]
   },
@@ -1453,7 +1485,7 @@
     "id": "TGOlmtJoSSuj"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font>The hobbies of people in the middle-east are closely related to certain activities while for asian it is much broader.</font>"
    ]
   },
   {
@@ -1473,7 +1505,8 @@
     "id": "19pM85fCSSuk"
    },
    "source": [
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font>Bias can appear from uncleaned corpus. Such as between individual population.</font>\n",
+    "#### <font>For example: Foreigners - Craftman, Refugee, etc while Locals - Journalist, Authour, etc</font>"
    ]
   },
   {
@@ -1491,8 +1524,7 @@
     "id": "dnJaAB7mSSul"
    },
    "source": [
-    "\n",
-    "#### <font color=\"red\">Write your answer here.</font>"
+    "#### <font>Preprocess data before applying Word2Vec. Such as removing race, sex, and other cateogires of words that can create bias before reintroducing them back into the data.</font>"
    ]
   },
   {
