--- a/cs224n/week1/exploring_word_vectors.ipynb
+++ b/cs224n/week1/exploring_word_vectors.ipynb
@@ -711,8 +711,8 @@
     "id": "fLU7o3HESSuF"
    },
    "source": [
-    "#### <font>Raw Materials: copper, platinum, silver, and gold.</font>\n",
-    "#### <font>Mining Related: metals, value, reserves, belgium, china.</font>"
+    "#### <font>Group 1: copper, platinum, silver, and gold.</font>\n",
+    "#### <font>Group 2: reserves, belgium, and china.</font>"
    ]
   },
   {
@@ -957,8 +957,8 @@
     "id": "5KC4PTQoSSuQ"
    },
    "source": [
-    "#### <font> The x-axis of each graph scales uniquely while both cap at 1.00.</font>\n",
-    "#### <font> The y-axis of each graph has different ranges.</font>"
+    "#### <font> V-Shape vs Exponential Shape.</font>\n",
+    "#### <font> Both have the x axis cap at 1.0</font>"
    ]
   },
   {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "id": "ms-DTC8_ftiA"
    },
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
