Finish Assingment 2 Text Questions

--- a/cs224n/assignment 2/latex/q1.tex
+++ b/cs224n/assignment 2/latex/q1.tex
@@ -86,7 +86,7 @@ Prove that the naive-softmax loss (Equation \ref{naive-softmax}) is the same as 
     \newline \( = U \hat{y} - U y\)
     \newline \( = U(\hat{y} - y) \)
     \newline QUESTION II. \( \hat{y} = y \) (The model can make perfect prediction on outside words o from center word c)
-    \newline QUESTION III. Subtracting this graident from \(v_c\) help minimize the loss function (negative partial derivative values point toward minima).
+    \newline QUESTION III. Subtracting this graident from \(v_c\) help minimize the loss function. (negative partial derivative values point toward minima)
 }
 
 % Question 1-C
