CSS224n Assingment 3 Model

--- a/cs224n/assignment 1/exploring_word_vectors.ipynb
+++ b/cs224n/assignment 1/exploring_word_vectors.ipynb
@@ -1586,7 +1586,7 @@
     "id": "19pM85fCSSuk"
    },
    "source": [
-    "#### <font color=\"red\">Input are collected from places with a targeted political view. Thus making the data skews toward a certain ideology.</font>"
+    "#### <font color=\"red\">Input are collected from places with a targeted political view. Thus making the data skews toward a certain ideology</font>"
    ]
   },
   {
@@ -1605,7 +1605,7 @@
    },
    "source": [
     "\n",
-    "#### <font color=\"red\">Preprocess the data before training the model and Hardcode certain rules.</font>"
+    "#### <font color=\"red\">Preprocess the data before training the model and hardcode certain rules</font>"
    ]
   },
   {
