CS224n Assignment 3 Written Premodel

--- a/cs224n/assignment 2/latex/q2.tex
+++ b/cs224n/assignment 2/latex/q2.tex
@@ -20,7 +20,7 @@
                 where $\beta_1$ is a hyperparameter between 0 and 1 (often set to  0.9). Briefly explain in 2--4 sentences (you don't need to prove mathematically, just give an intuition) how using $\bm$ stops the updates from varying as much and why this low variance may be helpful to learning, overall.\newline
               
                 \ifans{
-                    \newline The momentum m (controlled by parameter \( \beta_1 \)) smooths the update rate. It helps pointing the gradients toward the long term minima.
+                    \newline The momentum m (controlled by parameter \( \beta_1 \)) acts as an average that smooths the update rate. It helps pointing the gradients toward the long term minima, avoiding local minimas and addressing noisy oscillations.
                 }   
                 
             \subpart[2] Adam extends the idea of {\it momentum} with the trick of {\it adaptive learning rates} by keeping track of  $\bv$, a rolling average of the magnitudes of the gradients:
@@ -57,7 +57,10 @@
           \subpart[2] Why should dropout be applied during training? Why should dropout \textbf{NOT} be applied during evaluation? \textbf{Hint:} it may help to look at the dropout paper linked. \newline
           
             \ifans{
-                \newline QUESTION I. $ \gamma = \dfrac{1}{p_{drop}} $. If we turn off $ p_{drop} $ neurons we need to offset those values by scaling the other neurons to maintain the network.
+                \newline QUESTION I. 
+                $ \mathbb{E}_{p_{\text{drop}}}[\bh_\text{drop}] = \mathbb{E}_{p_{\text{drop}}}[\gamma \bd \odot \bh] = \gamma \mathbb{E}_{p_{\text{drop}}} [\bd] \odot \bh = \gamma (1 - p_{drop})\bh = \bh $
+                \newline 
+                $ \gamma = \dfrac{1}{1 - p_{drop}} $. If we turn off $ p_{drop} $ neurons we need to offset those values by scaling the other neurons to maintain the network.
                 \newline QUESTION II. Dropout can be applied during training to avoid overfitting. While it's a bad idea to apply it in evaluation since it will simply break the well-trained model.
             }
         \end{subparts}
