--- a/cs224n/assignment 2/latex/q3.tex
+++ b/cs224n/assignment 2/latex/q3.tex
@@ -257,5 +257,5 @@ In particular, you \textbf{do not} need to look at the labels on the the depende
 }
 
 \part[2] Recall in part (e), the parser uses features which includes words and their part-of-speech (POS) tags. Explain the benefit of using part-of-speech tags as features in the parser?
-\newline \ifans{ \newline It can help the model identify the function of each word in the sentence and calculate the probability when predicting. }
+\newline \ifans{ \newline It can help the model identify the function of each word and calculate the probability when predicting (especially useful when dealing with words that have multiple meanings). This also provide additional information about the syntactic and semantic contexts.}
 \end{parts}
