--- a/cs224n/assignment 3/latex/main.tex
+++ b/cs224n/assignment 3/latex/main.tex
@@ -1,4 +1,5 @@
- \documentclass[answers]{exam}
+% !TEX program = xelatex
+\documentclass[answers]{exam}
 \usepackage{xeCJK}
 \newif\ifanswers
 % REMEMBER TO COMMENT OUT BEFORE GIVING TO PRETESTERS
